--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt --use-mirrors"
 # command to run tests
-script: py.test
+script: python setup.py test
 
